[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "file-utils-luugap"
version = "0.1.0"
description = "Utility library for preprocessing datasets, videos, images, and file system operations"
authors = [{name = "LuuGap"}]
dependencies = ["pandas", "natsort"]
